--- a/202101-javascript-pixijs-game/src/index.html
+++ b/202101-javascript-pixijs-game/src/index.html
@@ -9,13 +9,13 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
     <!-- Browser icon and iPhone/iPad home screen icon -->
-    <link rel="icon" type="image/png" href="corncash/assets/icon-flask-32x32.png">
-    <link rel="apple-touch-icon" href="corncash/assets/icon-flask-apple-512x512.png">
+    <link rel="icon" type="image/png" href="hilo/assets/icons/icon-favicon-32x32.png">
+    <link rel="apple-touch-icon" href="hilo/assets/icons/icon-apple-512x512.png">
     <!-- Web manifest for the app; extension is for parcel compatibility -->
     <link rel="manifest" href="manifest.webmanifest">
   </head>
   <body>
-    <!-- Entrypoint for our JavaScript -->
-    <script src="main.js"></script>
+    <!-- Entrypoint for our JS -->
+    <script src="app.js"></script>
   </body>
 </html>
